--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
+  margin-top:5%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+}
+.seat-display{
+  margin-top: 100px;
+  width: 50%;
+  height: 50%;
+  display: grid;
+  grid-template-columns: repeat(7,1fr);
+  grid-gap: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.filled{
+  background-color: red;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.available{
+  background-color: green;
+}
+.filled,.available{
+  text-align: center;
+  width: 40px;
+  height: 35px;
+  padding: 0;
+  padding-top: 5px;
+  margin: 0;
 }
